<resources>
    <string name="app_name" translatable="false">Abseka</string>

    <string name="date_format">Monday, 12 July 2023</string>
    <string name="welcome_salam">Assalamu\'alaikum</string>
    <string name="time_datang">-</string>
    <string name="pulang">Homewards</string>
    <string name="datang">Arrive</string>
    <string name="rekapan">Recaps</string>

    <string name="hadir">Attend</string>
    <string name="ghaib">Absent</string>
    <string name="late">Overdue</string>
    <string name="not_yet_absent">Not Yet Absent</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>

    <string name="unida">University of Darussalam Gontor</string>
    <string name="time_blm_absen" translatable="false">-</string>
    <string name="user_name" translatable="false">Ardena Afif Pratama</string>
    <string name="update_account">Update Account</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>

    <string name="change_language">Change Language</string>

    <string name="welcome">Welcome</string>
    <string name="login_with_siakad">Login with SIAKAD</string>
    <string name="login">Login</string>
    <string name="login_with">Or sign in with</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="choose_language">Choose Language</string>
    <string name="indonesia">Indonesian</string>
    <string name="arabiyah">العربية</string>
    <string name="language">English</string>
    <string name="settings">Settings</string>
    <string name="not_ready">Feature not ready yet</string>

    <string name="info_language">This app is available in english and indonesian language, change language settings below.</string>
    <string name="today">Today</string>

    <string name="success_absen">Absent Successfully</string>
    <string name="office_hour">Outside office working hours</string>
    <string name="klik_absen_first">First Arrival Attendance</string>

    <string-array name="languages">
        <item>English</item>
        <item>Indonesia</item>
        <item>Arabic</item>
    </string-array>
</resources>